stuff for slides

--- a/index.html
+++ b/index.html
@@ -172,7 +172,8 @@ pre code {
 </div>
 
 
-<p>Link to slide decks:</p>
+<p>Link to slide decks RMD:</p>
+<p>Link to slide decks LaTeX:</p>
 <p>Link to CV: <a href="https://github.com/stat850-unl/11-presentation-aegrube6/blob/master/cvtemplategrube.pdf" class="uri">https://github.com/stat850-unl/11-presentation-aegrube6/blob/master/cvtemplategrube.pdf</a></p>
 
 
