--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@ pre code {
 </div>
 
 
-<p>Link to slide decks RMD:</p>
+<p>Link to slide decks RMD: <a href="https://github.com/stat850-unl/11-presentation-aegrube6/commit/446f4083573dca92dc8137383d3351fb36a7c3e0" class="uri">https://github.com/stat850-unl/11-presentation-aegrube6/commit/446f4083573dca92dc8137383d3351fb36a7c3e0</a></p>
 <p>Link to slide decks LaTeX:</p>
 <p>Link to CV: <a href="https://github.com/stat850-unl/11-presentation-aegrube6/blob/master/cvtemplategrube.pdf" class="uri">https://github.com/stat850-unl/11-presentation-aegrube6/blob/master/cvtemplategrube.pdf</a></p>
 
