--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@ pre code {
 </div>
 
 
-<p>Link to slide decks RMD: <a href="https://github.com/stat850-unl/11-presentation-aegrube6/commit/b8f660912b9c52c563c0b99d078095ba9e17b5a1" class="uri">https://github.com/stat850-unl/11-presentation-aegrube6/commit/b8f660912b9c52c563c0b99d078095ba9e17b5a1</a></p>
+<p>Link to slide decks RMD: <a href="https://github.com/stat850-unl/11-presentation-aegrube6/blob/master/grube-presentation.md" class="uri">https://github.com/stat850-unl/11-presentation-aegrube6/blob/master/grube-presentation.md</a></p>
 <p>Link to slide decks LaTeX:</p>
 <p>Link to CV: <a href="https://github.com/stat850-unl/11-presentation-aegrube6/blob/master/cvtemplategrube.pdf" class="uri">https://github.com/stat850-unl/11-presentation-aegrube6/blob/master/cvtemplategrube.pdf</a></p>
 
