--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@ pre code {
 
 
 <p>Link to slide decks RMD: <a href="https://github.com/stat850-unl/11-presentation-aegrube6/blob/master/grube-presentation.md" class="uri">https://github.com/stat850-unl/11-presentation-aegrube6/blob/master/grube-presentation.md</a></p>
-<p>Link to slide decks LaTeX:</p>
+<p>Link to slide decks LaTeX: <a href="https://github.com/stat850-unl/11-presentation-aegrube6/blob/master/grubepresentation.tex" class="uri">https://github.com/stat850-unl/11-presentation-aegrube6/blob/master/grubepresentation.tex</a></p>
 <p>Link to CV: <a href="https://github.com/stat850-unl/11-presentation-aegrube6/blob/master/cvtemplategrube.pdf" class="uri">https://github.com/stat850-unl/11-presentation-aegrube6/blob/master/cvtemplategrube.pdf</a></p>
 
 
