--- a/index.html
+++ b/index.html
@@ -172,9 +172,9 @@ pre code {
 </div>
 
 
-<p>Link to slide decks RMD: <a href="https://github.com/stat850-unl/11-presentation-aegrube6/blob/master/grube-presentation.md" class="uri">https://github.com/stat850-unl/11-presentation-aegrube6/blob/master/grube-presentation.md</a></p>
-<p>Link to slide decks LaTeX: <a href="https://github.com/stat850-unl/11-presentation-aegrube6/blob/master/grubepresentation.pdf" class="uri">https://github.com/stat850-unl/11-presentation-aegrube6/blob/master/grubepresentation.pdf</a></p>
-<p>Link to CV: <a href="https://github.com/stat850-unl/11-presentation-aegrube6/blob/master/cvtemplategrube.pdf" class="uri">https://github.com/stat850-unl/11-presentation-aegrube6/blob/master/cvtemplategrube.pdf</a></p>
+<p><a href="https://stat850-unl.github.io/11-presentation-aegrube6/grube-presentation.html">Link to slide deck - html</a></p>
+<p>[Link to slide decks - LaTeX] <a href="https://stat850-unl.github.io/11-presentation-aegrube6/grubepresentation.pdf" class="uri">https://stat850-unl.github.io/11-presentation-aegrube6/grubepresentation.pdf</a></p>
+<p>[Link to CV] <a href="https://stat850-unl.github.io/11-presentation-aegrube6/cvtemplategrube.pdf" class="uri">https://stat850-unl.github.io/11-presentation-aegrube6/cvtemplategrube.pdf</a></p>
 
 
 
